<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardBackgroundColor="#10000000"
    card_view:cardCornerRadius="14dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="16dp"
        android:paddingStart="0dp"
        >

        <ImageView
            android:id="@+id/im_thumbnailFolded"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/qr_code_associated_with_account"
            android:focusable="true"
            android:src="@drawable/bitcoin_128" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/im_thumbnailFolded">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layout_name_and_balance"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAccountNameFolded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/account_nickname"
                    android:text="@string/temp_account_nickname"
                    android:textColor="@color/text_dark_primary" />

                <TextView
                    android:id="@+id/tvAccountBalanceFolded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/balance_in_btc"
                    android:text="@string/temp_balance_in_btc" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvAccountRateFolded"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/current_converted_price"
                android:text="@string/loading"
                android:textColor="@color/text_dark_primary"
                tools:text="300.0 BTC" />


        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
