<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    style="@style/customCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardBackgroundColor="@android:color/transparent"
    card_view:cardElevation="0dp"
    android:padding="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:alpha="0.65"
        android:src="@drawable/ic_expand_more_white_24dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/im_thumbnailFolded"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/qr_code_associated_with_account"
            android:focusable="true"
            android:src="@drawable/bitcoin_128" />

        <ImageView
            android:id="@+id/im_OverflowFolded"
            android:layout_width="@dimen/ic_album_overflow_width"
            android:layout_height="@dimen/ic_album_overflow_width"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/ic_album_overflow_margin_top"
            android:layout_marginEnd="@dimen/ic_album_overflow_margin_end"
            android:scaleType="centerCrop"
            android:src="?attr/ic_account_settings" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/im_thumbnailFolded">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layout_name_and_balance"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAccountNameFolded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/account_nickname"
                    android:text="@string/temp_account_nickname"
                    android:textColor="@color/text_dark_primary" />

                <TextView
                    android:id="@+id/tvAccountBalanceFolded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/balance_in_btc"
                    android:text="@string/temp_balance_in_btc" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvAccountRateFolded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@id/layout_name_and_balance"
                android:contentDescription="@string/current_converted_price"
                android:layout_marginEnd="@dimen/ic_album_overflow_margin_end"
                android:text="@string/loading" />


        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
