<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Activity.AccountDetailActivity"
    android:background="@drawable/background_color_dark">

    <RelativeLayout
        android:padding="8dp"
        android:id="@+id/layout_top_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/bAccountDetailsGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:rotation="90"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_expand_more_white_48dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/im_account_details_image"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/qr_code_associated_with_account"
            android:focusable="true"
            android:src="@drawable/bitcoin_128" />

        <TextView
            android:paddingTop="16dp"
            android:id="@+id/tv_unfolded_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="@string/transition_account_nickname"
            android:layout_toEndOf="@id/im_account_details_image"
            tools:text="NICKNAME" />

        <TextView
            android:id="@+id/tv_unfolded_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_unfolded_nickname"
            android:layout_toEndOf="@id/im_account_details_image"
            tools:text="ACCOUNT ADDRESS"
            android:alpha="0.60" />

        <TextView
            android:id="@+id/tv_account_final_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textSize="24sp"
            android:layout_toEndOf="@id/im_account_details_image"
            android:layout_below="@id/tv_unfolded_address"
            android:transitionName="@string/transition_account_balance"
            tools:text="30 000 BTC" />

        <TextView
            android:id="@+id/tv_unfolded_last_transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/im_account_details_image"
            android:layout_centerHorizontal="true"
            android:paddingTop="8dp"
            android:text="@string/latest_transactions" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transactionList"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:layout_marginBottom="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_unfolded_last_transactions"
            android:layout_centerHorizontal="true"
            tools:listitem="@layout/transaction_item" />

    </RelativeLayout>

</android.widget.LinearLayout>
